p3/confs/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-playground
  namespace: dev
  labels:
    app.kubernetes.io/name: wil-playground
    app.kubernetes.io/part-of: inception-of-things
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wil-playground
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wil-playground
        app.kubernetes.io/part-of: inception-of-things
    spec:
      containers:
        - name: wil-playground
          image: wil42/playground:v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8888
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 12
