p3/confs/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground
  namespace: dev
  labels:
    app.kubernetes.io/name: wil-playground
    app.kubernetes.io/part-of: inception-of-things
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wil-playground
  ports:
    - name: http
      port: 8888
      targetPort: http
      protocol: TCP
